--- a/JobPlatformUIService/JobPlatformUIService.csproj
+++ b/JobPlatformUIService/JobPlatformUIService.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -6,11 +6,14 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>9ac0af54-1c16-43c0-9bd7-fadb5445a102</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FirebaseDatabase.net" Version="4.0.7" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="Google.Cloud.Firestore" Version="2.5.0" />
   </ItemGroup>
 
 </Project>
