--- a/JobPlatformUIService.Infrastructure/JobPlatformUIService.Infrastructure.csproj
+++ b/JobPlatformUIService.Infrastructure/JobPlatformUIService.Infrastructure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
@@ -15,6 +15,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\JobPlatformUIService.Core\JobPlatformUIService.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Data\Firestore\Models\" />
   </ItemGroup>
 
 </Project>
