Add basic controler for user  start vertical design

--- a/JobPlatformUIService/JobPlatformUIService.csproj
+++ b/JobPlatformUIService/JobPlatformUIService.csproj
@@ -24,4 +24,10 @@
     <ProjectReference Include="..\JobPlatformUIService.Infrastructure\JobPlatformUIService.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\Jobs\" />
+    <Folder Include="Features\User\AddUser\" />
+    <Folder Include="Web\" />
+  </ItemGroup>
+
 </Project>
