--- a/JobPlatformUIService.Infrastructure/JobPlatformUIService.Infrastructure.csproj
+++ b/JobPlatformUIService.Infrastructure/JobPlatformUIService.Infrastructure.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Google.Cloud.Firestore" Version="2.5.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
+    <PackageReference Include="morelinq" Version="3.3.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
   </ItemGroup>
 
