Changes:  - add delete user feature for Admin  - add constatns for colections  - start job features

--- a/JobPlatformUIService/JobPlatformUIService.csproj
+++ b/JobPlatformUIService/JobPlatformUIService.csproj
@@ -25,7 +25,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Features\Jobs\" />
+    <Folder Include="Features\Jobs\AddJob\" />
+    <Folder Include="Features\Jobs\ChangeJobStatus\" />
+    <Folder Include="Features\Jobs\UpdateJob\" />
     <Folder Include="Web\" />
   </ItemGroup>
 
