--- a/JobPlatformUIService/JobPlatformUIService.csproj
+++ b/JobPlatformUIService/JobPlatformUIService.csproj
@@ -26,6 +26,7 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+    <Folder Include="Features\Jobs\ApplyToJobs\" />
     <Folder Include="Web\" />
   </ItemGroup>
 
