--- a/JobPlatformUIService/JobPlatformUIService.csproj
+++ b/JobPlatformUIService/JobPlatformUIService.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FirebaseAdmin" Version="2.3.0" />
     <PackageReference Include="FirebaseDatabase.net" Version="4.0.7" />
     <PackageReference Include="MailKit" Version="3.2.0" />
     <PackageReference Include="MediatR" Version="10.0.1" />
