Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ docker-build-master:
     - docker build --pull -t "$CI_REGISTRY_IMAGE" .
     - docker push "$CI_REGISTRY_IMAGE"
   only:
-    - master
+    - main
 
 deploy-service-master:
   stage: deploy
@@ -14,4 +14,4 @@ deploy-service-master:
     - apk add --update curl
     - curl -XPOST http://host.docker.internal:9000/api/webhooks/49e55708-fadc-4f81-b9ba-f778914d3915
   only:
-    - master
+    - main
